added scheduler, fileservice

--- a/Files/appsettings.json
+++ b/Files/appsettings.json
@@ -2,5 +2,8 @@
   "FileProcessorSettings": {
     "DirectoryPath": "E:\\FilesTest",
     "FileExtension": ".mp3"
+  },
+  "SchedulerSettings": {
+    "ExecuteImmediately": true
   }
 }
